--- a/movies.ipynb
+++ b/movies.ipynb
@@ -8,6 +8,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data comes from the IMDB movie site. It contains data about ratings, revenue, costs and cast. We will explore what type of impact cast, production company and genre have on revenue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "Here we will explore movie data and see if there if revenue is affected by genre, budget and cast"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -316,6 +331,176 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A bit of exploration on the data\n",
+    "\n",
+    "imbdb_id, cast, homepage, director, tagline, keywords, overview, genres, production_companies all have missing data. Something to keep in mind when asking questions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df.duplicated())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df.duplicated())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dropped duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10865, 21)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1992, 21)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1992 entries, 0 to 10819\n",
+      "Data columns (total 21 columns):\n",
+      "id                      1992 non-null int64\n",
+      "imdb_id                 1992 non-null object\n",
+      "popularity              1992 non-null float64\n",
+      "budget                  1992 non-null int64\n",
+      "revenue                 1992 non-null int64\n",
+      "original_title          1992 non-null object\n",
+      "cast                    1992 non-null object\n",
+      "homepage                1992 non-null object\n",
+      "director                1992 non-null object\n",
+      "tagline                 1992 non-null object\n",
+      "keywords                1992 non-null object\n",
+      "overview                1992 non-null object\n",
+      "runtime                 1992 non-null int64\n",
+      "genres                  1992 non-null object\n",
+      "production_companies    1992 non-null object\n",
+      "release_date            1992 non-null object\n",
+      "vote_count              1992 non-null int64\n",
+      "vote_average            1992 non-null float64\n",
+      "release_year            1992 non-null int64\n",
+      "budget_adj              1992 non-null float64\n",
+      "revenue_adj             1992 non-null float64\n",
+      "dtypes: float64(4), int64(6), object(11)\n",
+      "memory usage: 342.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dropped any rows with missing data"
    ]
   },
   {
